# germina_web

./: .gitignore  Makefile.toml  README.md
build_tools/: Cargo.toml
build_tools/src/cp/: main.rs
build_tools/src/mkdir/: main.rs
server/: .env  Cargo.toml  Makefile.toml  Rocket.toml
server/entity/: Cargo.toml
server/entity/src/: lib.rs  prelude.rs  user.rs
server/migration/: Cargo.toml
server/migration/src/: m20220101_000001_create_users.rs
server/src/: main.rs  pool.rs
web/: Cargo.toml  Makefile.toml
web/src/: lib.rs
web/static/: index.html
