[package]
name = "web"
version = "0.1.0"
authors = ["nanoqsh <nanoqsh@gmail.com>"]
description = "Frontend of the website"
categories = ["website"]
license = "MIT"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
seed = "0.9"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
